created apis for login , create branch, create employee,create customer
